src/test/ui/resolve/issue-19452.stderr
error[E0423]: expected value, found struct variant `Homura::Madoka`
  --> $DIR/issue-19452.rs:10:18
   |
LL |     Madoka { age: u32 }
   |     ------------------- `Homura::Madoka` defined here
...
LL |     let homura = Homura::Madoka;
   |                  ^^^^^^^^^^^^^^ help: use struct literal syntax instead: `Homura::Madoka { age: val }`

error[E0423]: expected value, found struct variant `issue_19452_aux::Homura::Madoka`
  --> $DIR/issue-19452.rs:13:18
   |
LL |     let homura = issue_19452_aux::Homura::Madoka;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use struct literal syntax instead: `issue_19452_aux::Homura::Madoka { /* fields */ }`
   | 
  ::: $DIR/auxiliary/issue-19452-aux.rs:2:5
   |
LL |     Madoka { age: u32 }
   |     ------ `issue_19452_aux::Homura::Madoka` defined here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
